Fixes alignment in footer section

--- a/src/styles/components/footer/Footer.scss
+++ b/src/styles/components/footer/Footer.scss
@@ -1,4 +1,4 @@
 .footer {
-    margin-top: 60px;
+    margin-top: 40px;
     font-size: 12px;
 }
